kubernetes-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: conforl-production
  labels:
    name: conforl-production
    environment: production
